// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapsingSideBar renders correctly 1`] = `
<div>
  <section
    aria-labelledby="collapsing-side-bar-:r0:-heading"
    class="css-12rvz6t-boxStyles-boxStyles-CollapsingSideBar"
  >
    <div
      class="css-rbtfq5-boxStyles-boxStyles-CollapsingSideBar"
    >
      <div
        class="css-wg1upn-boxStyles-boxStyles-CollapsingSideBar"
        id="collapsing-side-bar-:r0:-heading"
      >
        <h2
          class="css-a3bu42-boxStyles-boxStyles"
        >
          Title
        </h2>
        <span
          class="css-1da6rsp-boxStyles-boxStyles"
        >
          Subtitle
        </span>
      </div>
      <button
        aria-controls="collapsing-side-bar-:r0:-body"
        aria-describedby="collapsing-side-bar-:r0:-heading"
        aria-expanded="false"
        aria-label="Title (Expand/Collapse)"
        class="css-116vn0r-BaseButton-boxStyles-boxStyles-CollapsingSideBar"
        type="button"
      >
        <span
          class="css-1iyeawx-boxStyles-boxStyles"
        >
          <span
            class="css-nl8gpu-boxStyles-boxStyles"
          >
            <span
              class="css-vzbp5o-boxStyles-boxStyles-CollapsingSideBar"
            >
              Title
            </span>
            <span
              class="css-1da6rsp-boxStyles-boxStyles"
            >
              Subtitle
            </span>
          </span>
          <svg
            aria-hidden="true"
            class="css-ln9yj9-CollapsingSideBar"
            clip-rule="evenodd"
            fill-rule="evenodd"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="6 9 12 15 18 9"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="css-3b4a55-CollapsingSideBar"
      id="collapsing-side-bar-:r0:-body"
      style="display: none; height: 0px;"
    >
      <div
        class="css-1b13c5y-boxStyles-boxStyles"
      >
        Content
      </div>
    </div>
  </section>
</div>
`;

exports[`CollapsingSideBar renders customTitleElement correctly 1`] = `
<div>
  <section
    aria-labelledby="collapsing-side-bar-:r1:-heading"
    class="css-12rvz6t-boxStyles-boxStyles-CollapsingSideBar"
  >
    <div
      class="css-rbtfq5-boxStyles-boxStyles-CollapsingSideBar"
    >
      <div
        class="css-bo5ha9-boxStyles-boxStyles-CollapsingSideBar"
        id="collapsing-side-bar-:r1:-heading"
      >
        <h2>
          Custom Title
        </h2>
      </div>
      <button
        aria-controls="collapsing-side-bar-:r1:-body"
        aria-describedby="collapsing-side-bar-:r1:-heading"
        aria-expanded="false"
        aria-label="Title (Expand/Collapse)"
        class="css-116vn0r-BaseButton-boxStyles-boxStyles-CollapsingSideBar"
        type="button"
      >
        <span
          class="css-1iyeawx-boxStyles-boxStyles"
        >
          <span
            class="css-nl8gpu-boxStyles-boxStyles"
          >
            <span
              class="css-vzbp5o-boxStyles-boxStyles-CollapsingSideBar"
            >
              Title
            </span>
            <span
              class="css-1da6rsp-boxStyles-boxStyles"
            >
              Subtitle
            </span>
          </span>
          <svg
            aria-hidden="true"
            class="css-ln9yj9-CollapsingSideBar"
            clip-rule="evenodd"
            fill-rule="evenodd"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="6 9 12 15 18 9"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="css-3b4a55-CollapsingSideBar"
      id="collapsing-side-bar-:r1:-body"
      style="display: none; height: 0px;"
    >
      <div
        class="css-1b13c5y-boxStyles-boxStyles"
      >
        Content
      </div>
    </div>
  </section>
</div>
`;
